<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="title">ini adalah title</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="source">ini adalah source</string>
    <string name="tflitevision_is_not_initialized_yet">TfLiteVision is not initialized yet</string>
    <string name="riwayat">Riwayat</string>
    <string name="fab_add">fab_add</string>
    <string name="berita">Berita</string>
    <string name="sadar_kanker">Sadar Kanker</string>
    <string name="button_kembali_ke_home">button kembali ke home</string>
    <string name="tambahkan_ke_riwayat">Tambahkan ke riwayat</string>
    <string name="tambahkan_ke_riwayat2">tambahkan ke riwayat</string>
    <string name="hapus_dari_riwayat">Hapus dari riwayat</string>
    <string name="gambar">gambar</string>
    <string name="back">back</string>
    <string name="waktu_publish">Waktu Publish : </string>
    <string name="baca_selengkapnya">Baca selengkapnya</string>
    <string name="deskripsi">Deskripsi :</string>
    <string name="kembali">kembali</string>
</resources>