<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/cardColor"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_view"
            android:layout_width="130dp"
            android:layout_height="120dp"
            android:contentDescription="@string/gallery"
            android:scaleType="centerCrop"
            android:layout_marginEnd="8dp"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Judul -->
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/primaryColor"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/title" />

            <!-- Deskripsi -->
            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:fontFamily="@font/poppins"
                android:maxLines="5"
                android:textColor="@color/primaryColor"
                tools:text="@string/source" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>