<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/main"
    tools:context=".ui.view.DetailInformationActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="128dp"
            android:background="@drawable/border_shape"
            android:contentDescription="@string/gambar"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="-8dp"
            tools:src="@tools:sample/avatars" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginTop="20dp"
            app:backgroundTint="@color/primaryColor"
            android:contentDescription="@string/back"
            app:layout_constraintBottom_toTopOf="@+id/image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.022"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.312"
            app:srcCompat="@drawable/back" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:padding="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/image"
            android:background="@color/white">

            <TextView
                android:id="@+id/name"
                android:textColor="@color/primaryColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_bold"
                android:textAlignment="center"
                tools:text="Judul" />

            <TextView
                android:id="@+id/ownerName"
                android:textColor="@color/secondaryColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginBottom="15dp"
                tools:text="Owner Name" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="15sp"
                    android:textColor="@color/primaryColor"
                    android:text="@string/waktu_publish" />

                <TextView
                    android:id="@+id/publish"
                    android:layout_width="wrap_content"
                    android:textColor="@color/secondaryColor"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textSize="15sp"
                    tools:text="gacor"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="15sp"
                    android:textColor="@color/primaryColor"
                    android:text="@string/deskripsi" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:textColor="@color/secondaryColor"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textSize="15sp"
                    tools:text="gacor"/>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnBaca"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center|bottom"
            android:text="@string/baca_selengkapnya"
            android:textColor="@color/white"
            app:backgroundTint="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="8dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
